# YourMT3

./: README.md  app.py  model_helper.py  pyproject.toml  test.mid
amt/: install_dataset.py  test.py  train.py
amt/config/: data_presets.py  task.py
amt/extras/: check_drum_channel_slakh.py  dataset_mutable_var_sanity_check.py  datasets_eval_testing.py  demo_cross_augmentation.py  demo_intra_augmentation.py  download_mirst500.py  inspecting_slakh_bass.py  multi_channel_seqlen_stats.py  perceivertf_inspect.py  perceivertf_multi_inspect.py  pitch_shift_benchmark.py  remove_silence_musicnet_midi.py  swap_channel.py  t5_dev.py  t5perceiver.py
amt/model/: conformer_mod.py  ff_layer.py  init_train.py  lr_scheduler.py  perceiver_mod.py  positional_encoding.py  projection_layer.py  spectrogram.py  t5mod.py  t5mod_helper.py  ymt3.py
amt/tests/: audio_test.py  event2note_test.py  event_codec_test.py  metrics_test.py  midi_test.py  note2event_test.py  note_event_roundtrip_test.py  tokenizer_test.py  utils_test.py
amt/tests/model/: ops_test.py  spectrogram_test.py
amt/utils/: audio.py  augment.py  data_modules.py  datasets_eval.py  datasets_helper.py  datasets_train.py  event2note.py  event_codec.py  metrics.py  metrics_helper.py  midi.py  note2event.py  task_manager.py  tokenizer.py  utils.py
amt/utils/preprocess/: dataset_stats.py  generate_dataset_stats.py  preprocess_cmedia.py  preprocess_egmd.py  preprocess_enstdrums.py  preprocess_geerdes.py  preprocess_guitarset.py  preprocess_idmt_smt_bass.py  (+10 more)
yourmt3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+1 files in other folders)
